# myfastapi

./: .dockeringore  .gitignore  Dockerfile  README.md  database.py  main.py  pyproject.toml  repository.py  router.py  setup.cfg  tasks.db
